# llama_cpp_openai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  autogen_basic.py  autogen_functions.py  basic.py
llama_cpp_openai/: __init__.py  _api_server.py  _llama_2_functionary_chat_handler.py
tests/: llama_cpp_openai_test.py
